# SwiftRemit

./: .gitignore  API.md  BATCH_REMITTANCE_IMPLEMENTATION.md  Cargo.toml  MIGRATION.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  WEBHOOK_CHECKLIST.md  WEBHOOK_COMPLETE.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md  WEBHOOK_QUICK_REFERENCE.md  WEBHOOK_SYSTEM.md  WEBHOOK_TEST_REPORT.md  deploy.ps1  deploy.sh  setup-webhooks.sh  verify-webhook-system.sh
.github/workflows/: webhook-ci.yml
.kiro/specs/get-remittances-by-agent/: design.md  requirements.md  tasks.md
api/: .env.example  package.json
api/src/: app.ts  config.ts
api/src/__tests__/: anchors.test.ts
backend/: package-lock.json  package.json
backend/examples/: send-webhook.ts
backend/migrations/: anchors_catalog_schema.sql  seed_anchor_catalog_data.sql  seed_webhook_test_data.sql  webhook_schema.sql
backend/monitoring/: webhook_queries.sql
backend/src/: api.ts  database.ts  index.ts  kyc-service.ts  scheduler.ts  stellar.ts  transaction-state.ts  types.ts  webhook-handler.ts  webhook-health.ts  webhook-logger.ts  webhook-verifier.ts
examples/: config.js
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.jsx
src/: config.rs  errors.rs  events.rs  fee_service.rs  lib.rs  migration.rs  rate_limit.rs  storage.rs  test_batch_create.rs  test_blacklist.rs  test_migration.rs  test_property.rs  transaction_controller.rs  types.rs  validation.rs
(+17 files in other folders)
